# alonglongname

./: BUILD.md  CMakeLists.txt  README.md  build_and_package.bat  build_windows.bat  deploy_qt.bat  installer.nsi
.github/workflows/: build-windows.yml
resources/themes/: default.json
src/clipboard/: CMakeLists.txt  ClipboardManager.cpp  ClipboardManager.h  ClipboardTypes.h
src/clipboard/sync/: SyncManager.cpp  SyncManager.h
src/config/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h
src/core/: CMakeLists.txt
src/core/common/: Logger.cpp  Logger.h  Types.cpp  Types.h
src/core/dictionary/: Dictionary.cpp  Dictionary.h
src/core/pinyin/: PinyinEngine.cpp  PinyinEngine.h  PinyinParser.cpp  PinyinParser.h
src/platform/windows/: CMakeLists.txt  main.cpp
src/platform/windows/tsf/: TSFLanguageBar.cpp  TSFLanguageBar.h  TSFModule.cpp  TSFModule.h  TSFPlugin.cpp  TSFTextService.cpp  TSFTextService.h
src/platform/windows/utils/: WinUtils.cpp  WinUtils.h
src/ui/: CMakeLists.txt
src/ui/candidate/: CandidateListModel.cpp  CandidateListModel.h  CandidateWindow.cpp  CandidateWindow.h
src/ui/resources/: resources.qrc
src/ui/settings/: AppearanceSettingsPage.cpp  AppearanceSettingsPage.h  GeneralSettingsPage.cpp  GeneralSettingsPage.h  SettingsDialog.cpp  SettingsDialog.h
test_standalone/: Makefile  main.cpp  pinyin_standalone.cpp  pinyin_standalone.h  pinyin_test  test_auto  test_auto.cpp
tests/: CMakeLists.txt  test_pinyin.cpp
